fixed overflow issue

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -151,6 +151,12 @@ ul#menu {
   border: 1px solid #2a2a2a;
 }
 
+#featured div.news div.content {
+  width: 100%;
+  height: 16em;
+  overflow: hidden;
+}
+
 #featured div.news:hover {
   background-color: #222;
 }
